...
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="0.91764705882352937" green="0.77254901960784317" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
                        <accessibility key="accessibilityConfiguration" hint="Wait until the lights turn on" label="Content Search">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
                        <gestureRecognizers/>
                        <constraints>
                            <constraint firstItem="1Md-64-eJX" firstAttribute="leading" secondItem="4bU-uI-9bT" secondAttribute="leadingMargin" constant="20" id="8RI-LO-chq"/>
                            <constraint firstAttribute="trailingMargin" secondItem="1Md-64-eJX" secondAttribute="trailing" constant="20" id="MvK-AO-5qD"/>
...
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0Vt-AK-8Q8">
                                                        <rect key="frame" x="491" y="0.0" width="51" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" hint="Tap to request location services for this app" identifier="Activate location" label="Activate location"/>
                                                        <connections>
                                                            <action selector="askForAccessToLocation:" destination="rHD-eO-G2Z" eventType="touchUpInside" id="THD-mH-URi"/>
                                                        </connections>
                                                    </switch>
                                                </subviews>
                                            </stackView>
...
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="6NG-bZ-rrm">
                                                <rect key="frame" x="491" y="0.0" width="51" height="31"/>
                                                <accessibility key="accessibilityConfiguration" hint="Tap to request notifications for this app" identifier="Activate notifications" label="Activate notifications"/>
                                                <connections>
                                                    <action selector="requestLocalNotifications:" destination="rHD-eO-G2Z" eventType="touchUpInside" id="z9d-yJ-2LO"/>
                                                </connections>
                                            </switch>
                                        </subviews>
                                    </stackView>
...
                                    <constraint firstAttribute="trailing" secondItem="uzT-mH-a9r" secondAttribute="trailing" id="KTn-DS-Ag3"/>
                                    <constraint firstItem="uzT-mH-a9r" firstAttribute="leading" secondItem="vIK-hX-0Re" secondAttribute="leading" id="iCi-q8-qOV"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H48-kc-dR9">
                                <rect key="frame" x="553" y="20" width="37" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="Tap to close the modal required settings view" identifier="Done" label="Done">
                                    <accessibilityTraits key="traits" button="YES"/>
                                </accessibility>
                                <state key="normal" title="Done">
                                    <color key="titleColor" red="0.91764705879999997" green="0.7725490196" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <state key="disabled">
...
                                <connections>
                                    <action selector="doneButtonPressed:" destination="rHD-eO-G2Z" eventType="touchUpInside" id="v8l-yc-j5T"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <accessibility key="accessibilityConfiguration" hint="There are required settings that need to be set by you" label="Required Settings">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
                        <constraints>
                            <constraint firstAttribute="trailingMargin" secondItem="gD5-am-NjO" secondAttribute="trailing" constant="10" id="5Wk-CH-NZN"/>
                            <constraint firstItem="S7H-DD-7H3" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gD5-am-NjO" secondAttribute="bottom" constant="10" id="6Jh-c9-Ds6"/>
                            <constraint firstAttribute="trailing" secondItem="H48-kc-dR9" secondAttribute="trailing" constant="10" id="Mqy-MU-lbL"/>
...
